<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText"
                android:hint="@string/nama" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText3"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText4"
                android:hint="@string/no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText5"
                android:hint="@string/alamat" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_weight="1"
                    android:text="@string/username" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText8"
                    android:layout_weight="1"
                    android:hint="@string/masukan_username" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_weight="1" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    >

                    <RadioButton
                        android:text="@string/pria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/pria"
                        android:textSize="@dimen/ukuran_huruf"
                        android:layout_weight="1"
                        android:checked="false" />

                    <RadioButton
                        android:text="@string/wanita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/wanita"
                        android:textSize="@dimen/ukuran_huruf"
                        android:layout_weight="1"
                        android:checked="false" />

                    <RadioButton
                        android:text="@string/tidak_dikenal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/zerogender"
                        android:textSize="@dimen/ukuran_huruf"
                        android:layout_weight="1"
                        android:checked="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Kompeten "
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <CheckBox
                        android:text="Java"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:layout_height="wrap_content"
                        android:id="@+id/java" />

                    <CheckBox
                        android:text="C"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/c" />

                    <CheckBox
                        android:text="C#"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/csharp" />

                    <CheckBox
                        android:text="C++"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/cplus" />

                    <CheckBox
                        android:text="Python"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/python" />

                    <CheckBox
                        android:text="Cotline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/cotline" />

                    <CheckBox
                        android:text="Basic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/ukuran_huruf2"
                        android:id="@+id/basic" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hobi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hobi" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/sepak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sepak Bola"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/catur"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Catur"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/renang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Berenang"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/lari"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lari"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/voli"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Voli"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/mancing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mancing"
                        android:textSize="@dimen/ukuran_huruf2" />

                    <CheckBox
                        android:id="@+id/other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lainya"
                        android:textSize="@dimen/ukuran_huruf2" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUBMIT" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>